# Deepagent-erc8004-kit

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  PRODUCTION_AUDIT.md  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  setup.sh
scripts/: circle_execute_contract.mjs  x402_batching.mjs  x402_nano.mjs  x402_payment.mjs
src/erc8004_deepagent_kit/: __init__.py  agent.py  cli.py  config.py
src/erc8004_deepagent_kit/deepagent/: system_prompt.py
src/erc8004_deepagent_kit/erc8004/: abi_identity.py  abi_reputation.py  abi_validation.py  addresses.py  events.py  metadata.py  receipts.py  registry_clients.py  reputation_indexer.py
src/erc8004_deepagent_kit/mcp/: schemas.py  server.py
src/erc8004_deepagent_kit/plugins/erc8183/: __init__.py  disabled.py
src/erc8004_deepagent_kit/plugins/x402/: __init__.py  disabled.py
src/erc8004_deepagent_kit/store/: identity_store.py  reputation_store.py  sqlite_store.py
src/erc8004_deepagent_kit/tools/: identity.py  registry_status.py  reputation.py  validation.py  x402.py  x402_batching.py  x402_nano.py
src/erc8004_deepagent_kit/wallet/: contract_executor.py  dcw.py  policy.py
src/erc8004_deepagent_kit/x402/: __init__.py  ledger.py  policy.py
