[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "erc8004-deepagent-kit"
version = "0.1.1"
description = "Docker-first LangChain Deep Agents SDK for ERC-8004 identity, reputation, validation, and Circle DCW execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ERC-8004 Deep Agent Kit Contributors" }]
dependencies = [
  "deepagents==0.6.11",
  "langchain-core==1.4.8",
  "langchain-anthropic==1.4.7",
  "langchain-openai==1.3.3",
  "web3==7.16.0",
  "eth-utils==6.0.0",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "typer==0.26.7",
]

[project.scripts]
erc8004-deepagent = "erc8004_deepagent_kit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/erc8004_deepagent_kit"]
